few changes and new hibernate proj added

--- a/BootProj04-RealtimeDI-AutoConfiguration/src/main/resources/application.properties
+++ b/BootProj04-RealtimeDI-AutoConfiguration/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DataSource inputs
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shopme
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=vamsitallapudi
 spring.datasource.password=yourpwd
 # no. of idle conn objs that jdbc conn pool should maintain
