--- a/BootProj04-RealtimeDI-AutoConfiguration 8.19.50 AM/src/main/resources/application.properties
+++ b/BootProj04-RealtimeDI-AutoConfiguration 8.19.50 AM/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/Employee
 spring.datasource.username=vamsitallapudi
-spring.datasource.password=
+spring.datasource.password=Vamsi#4123
 # no. of idle conn objs that jdbc conn pool should maintain
 spring.datasource.hikari.minimum-idle=10
 # maximum jdbc conn objs that jdbc conn pool can have
@@ -12,7 +12,7 @@ spring.datasource.hikari.idle-timeout=20
 #spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 #spring.datasource.type=oracle.ucp.jdbc.PoolDataSource //to use oracle UCP
 #//To use C3P0 (try with spring <=2.2/2.3)
-spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
+#spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
 
 #Server managed JDBC Conn Pool
-spring.datasource.jndi-name=DSJndi
+#spring.datasource.jndi-name=DSJndi
