--- a/SpringDataJPAProj03-JpaRepo/src/main/resources/application.properties
+++ b/SpringDataJPAProj03-JpaRepo/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username=root
 spring.datasource.password=Vamsi#4123
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #JPA-Hibernate Properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
