hibernate old files

--- a/HBProj24-HikariCP/.project
+++ b/HBProj24-HikariCP/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HBProj22-ObjectTimeStamping</name>
+	<name>HBProj24-HikariCP</name>
 	<comment></comment>
 	<projects>
 	</projects>
