--- a/Learn-Spring-Security/pom.xml
+++ b/Learn-Spring-Security/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1.1-jre</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
