--- a/Learn-Spring-Rest/src/main/resources/application.properties
+++ b/Learn-Spring-Rest/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+ribbon.listOfServers=http://localhost:8080
 #other values - create, validate, create-drop, create
