--- a/LearnSpringBoot01/src/main/resources/application.properties
+++ b/LearnSpringBoot01/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-logging.level.org.springframework = debug
+#logging.level.org.springframework = debug
 management.endpoints.web.exposure.include=*
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=tallapudi
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
