getting our properties from application.properties via @ConfigurationProperties annotated file

--- a/microservices/Limits-Service/src/main/resources/application.properties
+++ b/microservices/Limits-Service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.config.import=optional:configserver:http://localhost:8888
+
+# user defined props
+limits-service.minimum=2
+limits-service.maximum=998
