modified application properties to change to dev config from cloud

--- a/microservices/Limits-Service/src/main/resources/application.properties
+++ b/microservices/Limits-Service/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
+# property to switch local profiles
+spring.profiles.active=dev
+# main property to switch profile from cloud config server
+spring.cloud.config.profile=dev
 
 # user defined props
 limits-service.minimum=2
