--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=currency-exchange
 spring.config.import=optional:configserver:http://localhost:8888
 server.port=8000
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:~/Documents/data/h2/testDb;AUTO_SERVER=TRUE
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
