fetching the currency exchanges from db now.

--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:~/Documents/data/h2/testDb;AUTO_SERVER=TRUE
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
