--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
+
+# eureka server related props
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
