adding proj related files

--- a/microservices/Limits-Service/src/main/resources/application.properties
+++ b/microservices/Limits-Service/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.profiles.active=dev
 # main property to switch profile from cloud config server
 spring.cloud.config.profile=dev
 
-# user defined props
+# user defined propsm
 limits-service.minimum=2
 limits-service.maximum=998
