Inclusion of spring security and added additional crud operations for tourist

--- a/SpringBootRestProj10-CRUDOperations/src/main/resources/application.properties
+++ b/SpringBootRestProj10-CRUDOperations/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=Vamsi#4123
 
 server.port=4040
-server.servlet.context-path=/restminiproject
+#server.servlet.context-path=/restminiproject
 
+debug=true
 #JPA-Hibernate Properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
