--- a/SpringBootRestProj10-CRUDOperations/pom.xml
+++ b/SpringBootRestProj10-CRUDOperations/pom.xml
@@ -41,6 +41,13 @@
 			<version>2.16.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+
 
 
 		<dependency>
