--- a/Learn-Spring-Rest/src/main/resources/application.properties
+++ b/Learn-Spring-Rest/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-server.port=8081
+server.port=8080
 spring.application.name=rest-api
+spring.data.mongodb.uri=mongodb://localhost:27017/employeedb
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
-spring.datasource.username=root
-spring.datasource.password=Vamsi#4123
-
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-#JPA-Hibernate Properties
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-ribbon.listOfServers=http://localhost:8080
+# Remove MySQL and JPA properties as they are not needed for MongoDB
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
+# spring.datasource.username=root
+# spring.datasource.password=Vamsi#4123
+# spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# ribbon.listOfServers=http://localhost:8080
 #other values - create, validate, create-drop, create
