--- a/Learn-Spring-Rest/src/main/resources/application.properties
+++ b/Learn-Spring-Rest/src/main/resources/application.properties
@@ -2,6 +2,13 @@ server.port=8080
 spring.application.name=rest-api
 spring.data.mongodb.uri=mongodb://localhost:27017/employeedb
 
+# Posts API Configuration
+posts.api.base-url=https://flourishing-starlight-8e274f.netlify.app
+
+# Feign Logging
+logging.level.com.coderefer.learnspringrest.feign=DEBUG
+feign.client.config.default.loggerLevel=FULL
+
 # Remove MySQL and JPA properties as they are not needed for MongoDB
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
