rate limiting on post api is now working

--- a/Learn-Spring-Rest/src/main/resources/application.properties
+++ b/Learn-Spring-Rest/src/main/resources/application.properties
@@ -1,22 +1,9 @@
 server.port=8080
 spring.application.name=rest-api
-spring.data.mongodb.uri=mongodb://localhost:27017/employeedb
 
 # Posts API Configuration
 posts.api.base-url=https://flourishing-starlight-8e274f.netlify.app
 
-# Feign Logging
-logging.level.com.coderefer.learnspringrest.feign=DEBUG
-feign.client.config.default.loggerLevel=FULL
-
-# Remove MySQL and JPA properties as they are not needed for MongoDB
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
-# spring.datasource.username=root
-# spring.datasource.password=Vamsi#4123
-# spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-# spring.jpa.show-sql=true
-# spring.jpa.hibernate.ddl-auto=update
-# ribbon.listOfServers=http://localhost:8080
-#other values - create, validate, create-drop, create
+# Logging
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty=DEBUG
